# sansJson

./: .gitignore  README.md  benchmark.py  pyproject.toml
.github/workflows/: commit.yml  release.yml
sansjson/: README.md  __init__.py  pyproject.toml  utils.py
sansjson/tests/: conftest.py  test_sort_dict.py  test_sort_json.py  test_sort_list.py  test_sorter.py
