[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sansjson"
version = "0.2.0"
authors = [
  { name="nickumia", email="nickumia6@gmail.com" },
]
description = "Your friendly neighborhood JSON sorter helper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatchling.module]
name = "sansjson"

[tool.hatchling.sdist]
include = [
  "sansjson/",
]

[project.urls]
"Homepage" = "https://github.com/nickumia/sansjson"
"Bug Tracker" = "https://github.com/nickumia/sansjson/issues"
