[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sansjson"
version = "0.0.1"
authors = [
  { name="nickumia", email="nickumia6@gmail.com" },
]
description = "Your friendly neighborhood JSON sorter helper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nickumia/sansjson"
"Bug Tracker" = "https://github.com/nickumia/sansjson/issues"
